[tool.poetry]
name = "livestock"
version = "2018.09.0"
description = "Livestock is a package for Grasshopper providing components for modelling water movement and hydrothermal effects around buildings to enable and evaluate sustainable solutions, where those effects are incorporated."
authors = ["Christian Kongsgaard <ocni@dtu.dk>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
scipy = "^1.2"
numpy = "^1.15"
paramiko = "^2.4.1"
pyshp = "^2.0"
shapely = "^1.6"
cmf = "^1.4"
progressbar2 = "^3.39"


[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-cov = "^2.6.0"
coveralls = "^1.5.1"
flake8 = "^3.6"
mypy = "^0.650"
tox = "^3.6.0"

[build-system]
requires = ["poetry>=0.12", "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "poetry.masonry.api"